AP-12355: Testflows fixed
Because the newly added MountPointFileSystemAccessMock interfered.

AP-12355 (Container Input (File))